document WORKER_THREADS in example configuration
Signed-off-by: Rafał Malinowski <rafal.przemyslaw.malinowski@gmail.com>

--- a/docs/stellar-core_example.cfg
+++ b/docs/stellar-core_example.cfg
@@ -240,6 +240,11 @@ CATCHUP_COMPLETE=false
 # new history
 CATCHUP_RECENT=1024
 
+# WORKER_THREADS (integer) default 10
+# Number of threads available for doing long durations jobs, like bucket
+# merging and vertification.
+WORKER_THREADS=10
+
 # MAX_CONCURRENT_SUBPROCESSES (integer) default 16
 # History catchup can potentialy spawn a bunch of sub-processes.
 # This limits the number that will be active at a time.
